# Click-jack-vulnarability-backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  logger.py
app/routers/: main_ui.py  scanner.py
app/services/: header_scanner.py  report_generator.py  selenium_scanner.py
app/static/reports/: b1a229fc-21c2-4c10-8b6c-857e0943f506.txt
app/templates/: attacker_template.html  report.html  scan_ui.html
app/utils/: selenium_driver.py
