[project]
name = "amirta-sem-4-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "pdfkit>=1.0.0",
    "playwright>=1.57.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "uvicorn>=0.38.0",
    "weasyprint>=66.0",
]
